--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 
+/* Animations */
+
 @keyframes fadeIn {
   100% {
     opacity: 1;
@@ -104,10 +106,10 @@
     transform: scale(1);
   }
 }
-a {
-  color: inherit;
-  text-decoration: none;
-}
+
+/* Animations End */
+
+/* General */
 
 body {
   color: #fff;
@@ -119,8 +121,68 @@ body {
   overflow-x: hidden;
   text-align: center;
 }
+#preload {
+  display: none;
+}
+.overflow-wrap {
+  overflow-x: hidden;
+}
+section {
+  color: #616161;
+  line-height: 11pt;
+  padding: 70px 0 70px 0;
+  position: relative;
+  
+}
+section .container {
+  box-sizing: border-box;
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 10px;
+  width: 100%;
+}
+.flex {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.flex.row {
+  flex-direction: row;
+}
+.flex.wrap {
+  flex-wrap: wrap;
+}
+.header {
+  color: #444649;
+  font-family: "raleway-bold";
+  font-size: 25pt;
+  position: relative;
+  position: relative;
+}
+.header-bar {
+  background: #444649;
+  height: 4px;
+  margin: 25px 0 75px 0;
+  width: 70px;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
-/* Home section */
+
+/* Home Section */
+
+section:nth-of-type(1) {
+  color:#fff;
+  height: calc(100vh + 53px);
+  padding: 0 10px;
+  position: relative;
+  width: 100%;
+  height:85vh;
+}
+
 .my-video{
   position: absolute;
   right: 0;
@@ -152,13 +214,6 @@ body {
   text-align: center;
 }
 
-  
-  
-
-#preload {
-  display: none;
-}
-
 .page-link {
   cursor: pointer;
 }
@@ -167,9 +222,8 @@ body {
   pointer-events: none;
 }
 
-.overflow-wrap {
-  overflow-x: hidden;
-}
+
+/* Buttons Section Home */
 
 
 
@@ -189,44 +243,40 @@ body {
 .button .mdi {
   vertical-align: middle;
 }
+section:nth-of-type(1) .button {
+  margin-bottom: 53px;
+  padding: 12px 40px 12px 15px;
+  position: relative;
+}
+section:nth-of-type(1) .button .mdi {
+  position: absolute;
+  right: 15px;
+  top: 11px;
+  transition: transform 0.3s;
+}
+section:nth-of-type(1) .button:hover .mdi {
+  transform: rotate(90deg);
+}
+
+
+/* Typography Home Section */
 
 .bold {
   font-family: "Raleway-bold";
 }
-
-.flex {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+section:nth-of-type(1) .highlight {
+  font-family: "Raleway-semibold";
 }
-.flex.row {
-  flex-direction: row;
+section:nth-of-type(1) .text {
+  font-size: 16pt;
+  line-height: 20pt;
+  margin: 0 0 20px 0;
+  pointer-events: none;
+  z-index: 1;
 }
-.flex.wrap {
-  flex-wrap: wrap;
-  
-  
-}
-
 
 .highlight {
   color: #d47d19;
-}
-
-.header {
-  color: #444649;
-  font-family: "raleway-bold";
-  font-size: 25pt;
-  position: relative;
-  position: relative;
-}
-
-.header-bar {
-  background: #444649;
-  height: 4px;
-  margin: 25px 0 75px 0;
-  width: 70px;
 }
 
 .label {
@@ -238,7 +288,7 @@ body {
   background: #455261;
   height: 100px;
 }
-
+/* Navigation */
 nav {
   bottom: 0;
   left: 0;
@@ -297,6 +347,9 @@ nav .active {
   color: #d47d19;
 }
 
+/* Navigation End */
+
+/* Modal */
 .carousel-wrap {
   height: 250px;
   margin: 0 auto;
@@ -454,69 +507,12 @@ nav .active {
 .modal-wrap.visible .mask {
   opacity: 1;
 }
+/* Modal End */
 
-section {
-  color: #616161;
-  line-height: 11pt;
-  padding: 70px 0 70px 0;
-  position: relative;
-  
-}
-section .container {
-  box-sizing: border-box;
-  margin: 0 auto;
-  max-width: 1200px;
-  padding: 0 10px;
-  width: 100%;
-}
-section:nth-of-type(1) {
-  color: #fff;
-  height: calc(100vh + 53px);
-  padding: 0 10px;
-  width: 100%;
-  height: 10vh;
-}
-section:nth-of-type(1) .highlight {
-  font-family: "Raleway-semibold";
-}
-section:nth-of-type(1) {
-  height: calc(100vh + 53px);
-  padding: 0 10px;
-  position: relative;
-  width: 100%;
-  height:85vh;
-}
-section:nth-of-type(1) .text {
-  font-size: 16pt;
-  line-height: 20pt;
-  margin: 0 0 20px 0;
-  pointer-events: none;
-  z-index: 1;
-}
-section:nth-of-type(1) .hexagon {
-  transition: transform 0.9s ease-in-out;
-}
-section:nth-of-type(1) .hexagon:hover {
-  transform: rotate(540deg);
-}
-section:nth-of-type(1) .button {
-  margin-bottom: 53px;
-  padding: 12px 40px 12px 15px;
-  position: relative;
-}
-section:nth-of-type(1) .button .mdi {
-  position: absolute;
-  right: 15px;
-  top: 11px;
-  transition: transform 0.3s;
-}
-section:nth-of-type(1) .button:hover .mdi {
-  transform: rotate(90deg);
-}
+/* Section About */
 section:nth-of-type(2) .label-wrap .label {
   margin: 20px 0 10px 0;
 }
-
 
 section:nth-of-type(2) .bullet-wrap {
   height: 200px;
@@ -632,6 +628,9 @@ section:nth-of-type(2) .bar span {
   padding: 0 15px 0 0;
   z-index: 1;
 }
+
+/* Section Portfolio */
+
 section:nth-of-type(3) {
   background: #f5f5f5;
 }
@@ -757,6 +756,9 @@ section .flex-50-gt-sm {
   display: block;
 }
 
+
+/* Section Contact */
+
 section:nth-of-type(5) {
   background: #252934;
   color: #fff;
@@ -840,6 +842,7 @@ section:nth-of-type(5) #close {
   right: 0;
 }
 
+/* Footer */
 footer {
   background: #1b242f;
   padding: 70px 0 50px 0;
@@ -904,6 +907,10 @@ footer .footnote .highlight {
   color: #e31b6d;
   font-family: "Open Sans";
 }
+
+/* Footer End */
+
+/* Media Screens */
 
 @media screen and (max-width: 400px) {
   section:nth-of-type(3) #gallery .mix .card {
